Fixed russian on mobile issues

--- a/src/pages/Options/Home/MarketHeader/media.scss
+++ b/src/pages/Options/Home/MarketHeader/media.scss
@@ -16,7 +16,7 @@
                 display: block;
                 right: 0;
                 left: unset !important;
-                width: 256px !important;
+                width: 290px !important;
                 height: 100%;
                 overflow: auto !important;
                 z-index: 1001 !important;
